--- a/3.5
+++ b/3.5
@@ -2,6 +2,7 @@
 <!DOCTYPE keyboard SYSTEM "file://localhost/System/Library/DTDs/KeyboardLayout.dtd">
 <!--Created by Ukelele version 1.7 on 2006-12-05 at 13:50 (PST)-->
 <!--Last edited by Ukelele version 1.8.2 on 2011-03-24 at 23:05 (PDT)-->
+<!-- Layout by Eerie Cat -->
 <keyboard group="126" id="-2" name="ANE v3.5" maxout="3">
     <layouts>
         <layout first="0" last="17" modifiers="commonModifiers" mapSet="ANSI"/>
